# platform.core.appfw.data-control

./: CMakeLists.txt  capi-data-control.pc.in  data-control.conf.in  data-control.pc.in
doc/: data_control_doc.h
include/: data-control-bulk.h  data-control-map.h  data-control-noti.h  data-control-provider.h  data-control-sql-cursor.h  data-control-sql.h  data-control-types.h  data-control.h  data_control.h  data_control_bulk.h  data_control_internal.h  data_control_map.h  data_control_noti.h  data_control_provider.h  data_control_sql.h  data_control_sql_cursor.h  data_control_types.h
packaging/: data-control.spec
src/: data-control-bulk.c  data-control-internal.c  data-control-internal.h  data-control-map.c  data-control-noti.c  data-control-provider.c  data-control-sql-cursor.c  data-control-sql.c  data_control_bulk.c  data_control_internal.c  data_control_log.h  data_control_map.c  data_control_noti.c  data_control_provider.c  data_control_sql.c  data_control_sql_cursor.c
